npm start ready version with scrollbars fixes

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,13 @@ body {
   border-radius: 0.9rem;
   overflow: scroll;
   position: relative;
+
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.box::-webkit-scrollbar {
+  display: none;
 }
 
 .loader {
@@ -139,6 +146,12 @@ body {
   list-style: none;
   padding: 0.8rem 0;
   overflow: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.box::-webkit-scrollbar {
+  display: none;
 }
 
 .list-watched {
